Programs have changed to online and added/deleted out of date programs.

--- a/data.yml
+++ b/data.yml
@@ -2,5 +2,5 @@ display_name: Developer Bootcamp
 founded_year: 2016
 primary_email: info@developer-bootcamp.com
 slug: developer-bootcamp
-tagline: Earn an Accredited IT Certificate
-website: http://www.developer-bootcamp.com
+tagline: Earn an IT Certificate
+website: https://www.developer-bootcamp.com
