--- a/programs/masterjava/data.yml
+++ b/programs/masterjava/data.yml
@@ -1,18 +1,12 @@
 admissions: Application
 cities:
-- chelmsford
-- chicago
-- dallas
-- houston
-- irvine
-- san jose
-- remote
+- online
 commitment: full-time
-cost_description: varies by track
+cost_description: $4800
 display_name: Developer Bootcamp
-duration: 5-7
-duration_units: weeks
-financing: 'No'
+duration: 4
+duration_units: courses
+financing: 'Yes'
 guarantee: 'No'
 placement:
 program_slug: Master Java Developer Bootcamp
