--- a/programs/mastersql/data.yml
+++ b/programs/mastersql/data.yml
@@ -1,18 +1,12 @@
 admissions: Application
 cities:
-- chelmsford
-- chicago
-- dallas
-- houston
-- irvine
-- san jose
-- remote
+- online
 commitment: full-time
-cost_description: $7790
+cost_description: $6000
 display_name: Developer Bootcamp
-duration: 6
-duration_units: weeks
-financing: 'No'
+duration: 5
+duration_units: courses
+financing: 'Yes'
 guarantee: 'No'
 placement:
 program_slug: Master SQL Server Developer Bootcamp
