--- a/programs/mobile/data.yml
+++ b/programs/mobile/data.yml
@@ -1,18 +1,12 @@
 admissions: Application
 cities:
-- chelmsford
-- chicago
-- dallas
-- houston
-- irvine
-- san jose
-- remote
+- online
 commitment: full-time
-cost_description: $5490
+cost_description: $2400
 display_name: Developer Bootcamp
-duration: 4
-duration_units: weeks
-financing: 'No'
+duration: 2
+duration_units: courses
+financing: 'Yes'
 guarantee: 'No'
 placement:
 program_slug: Mobile Application Developer Bootcamp
