--- a/programs/net/data.yml
+++ b/programs/net/data.yml
@@ -1,21 +1,15 @@
 admissions: Application
 cities:
-- chelmsford
-- chicago
-- dallas
-- houston
-- irvine
-- san jose
-- remote
+- online
 commitment: full-time
-cost_description: varies by track
+cost_description: $6000
 display_name: Developer Bootcamp
-duration: 6-10
-duration_units: weeks
-financing: 'No'
+duration: 5
+duration_units: courses
+financing: 'Yes'
 guarantee: 'No'
 placement:
-program_slug: Microsoft .NET Developer Bootcamp
+program_slug: Microsoft .NET Developer Bootcamp: C#
 promises_job:
 scholarships:
 topics:
