--- a/programs/python/data.yml
+++ b/programs/python/data.yml
@@ -2,25 +2,18 @@ admissions: Application
 cities:
 - remote
 commitment: full-time
-cost_description: $6000
+cost_description: $1495
 display_name: Developer Bootcamp
-duration: 5
+duration: 1
 duration_units: courses
 financing: 'Yes'
 guarantee: 'No'
 placement:
-program_slug: Web Developer Bootcamp
+program_slug: Python Programmer Bootcamp
 promises_job:
 scholarships:
 topics:
-- html5
-- css
-- javascript
-- jquery
-- angular
-- php
 - python
-- asp.net
 tuition:
 tuition_units:
 reports_graduation_and_placement_rates: "No"
