--- a/programs/sqlserveradmin/data.yml
+++ b/programs/sqlserveradmin/data.yml
@@ -1,18 +1,12 @@
 admissions: Application
 cities:
-- chelmsford
-- chicago
-- dallas
-- houston
-- irvine
-- san jose
-- remote
+- online
 commitment: full-time
-cost_description: varies by track
+cost_description: $2400
 display_name: Developer Bootcamp
-duration: 3-4
-duration_units: weeks
-financing: 'No'
+duration: 2
+duration_units: courses
+financing: 'Yes'
 guarantee: 'No'
 placement:
 program_slug: SQL Server Administrator Bootcamp
